--- a/src/components/SearchBar/SearchBar.css
+++ b/src/components/SearchBar/SearchBar.css
@@ -39,3 +39,12 @@
 .SearchButton:active {
   background-color: #595959;
 }
+
+@media only screen and (max-width: 480px) {
+  .SearchButton {
+    height: 3.1rem;
+  }
+  .SearchBox {
+    height: 2.3rem;
+  }
+}
